--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
   },
+  "homepage": "https://health4all.com",
   "description": "Health4All helps users monitor their daily health activities through an interactive dashboard.",
   "repository": "https://github.com/Zannnz/Health4All",
   "author": "Health4All Team"
